Cambios en plantillas

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -8,10 +8,10 @@
     <thead class="text-muted">
       <tr>
         <th scope="col"></th>
-        <th scope="col">product</th>
-        <th scope="col">price</th>
-        <th scope="col">quantity</th>
-        <th scope="col">total price</th>
+        <th scope="col">Producto</th>
+        <th scope="col">Precio</th>
+        <th scope="col">cantidad</th>
+        <th scope="col">Precio total</th>
         <th scope="col"></th>
       </tr>
     </thead>
@@ -23,20 +23,21 @@
         <td>${{ item.price }}</td>
         <td>{{ item.quantity }}</td>
         <td>${{ item.total_price }}</td>
-        <td><a class="text-danger text-decoration-none" href="{% url 'cart:remove_from_cart' item.product.id %}">remove</a></td>
+        <td><a class="text-danger text-decoration-none" href="{% url 'cart:remove_from_cart' item.product.id %}">Eliminar del carrito</a></td>
       </tr>
     </tbody>
     {% endfor %}
 </table>
 <hr>
-<a href="{% url 'orders:create_order' %}" style="float: right;" class="btn btn-success mt-1">Checkout</a>
-<h4 class="mt-4"><span class="text-muted">Total:</span> ${{ cart.get_total_price }}</h4>
+<a href="/" class="btn btn-danger">Seguir comprando</a>
+<a href="{% url 'orders:create_order' %}" style="float: right;" class="btn btn-success mt-1">Comprar!</a>
+<h4 class="mt-4"><span class="text-muted">Precio total:</span> ${{ cart.get_total_price }}</h4>
 </div>
 {% else %}
 <div class="col-md-8 mt-5 pt-5 text-center">
   <br>
-  <h3 class="text-muted text-capitalize">cart is empty..!</h3>
-  <a href="/" class="text-primary text-decoration-none">Back</a>
+  <h3 class="text-muted text-capitalize">Tu carrito esta vacio!</h3>
+  <a href="/" class="text-primary text-decoration-none">Volver a la tienda</a>
 </div>
 {% endif %}
 <div class="col-md-2"></div>
