--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -9,67 +9,72 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!-- bootstrap css cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>{% if title %} {{ title }} {% else %} Django Online Shop {% endif %}</title>
+    <!-- <title>{% if title %} {{ title }} {% else %} Water's Store {% endif %}</title> -->
+    <title>Water's store</title>
 </head>
 <body>
   <header class="p-2 border-bottom">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <!-- cart icon -->
+        <!-- icono del carrito &#xe8cc; -->
         {% if request.user.is_authenticated %}
         <b class="text-primary">{{ cart_count }}</b>
         {% endif %}
-        <a href="{% url 'cart:show_cart' %}" class="text-primary mt-2 me-2"><i class="material-icons h3">&#xe8cc;</i></a>
-        <!-- favorite icon -->
+        <a href="{% url 'cart:show_cart' %}" class="text-primary mt-2 me-2"><i class="material-icons h3">🛒 </i></a>
+        <!-- icono para favoritos &#xe87d; -->
         {% if request.user.is_authenticated %}
         <b class="text-primary">{{ request.user.get_likes_count}}</b>
         {% endif %}
-        <a href="{% url 'shop:favorites' %}" class="text-primary mt-2 me-2"><i class="material-icons h3">&#xe87d;</i></a>
+        <a href="{% url 'shop:favorites' %}" class="text-primary mt-2 me-2"><i class="material-icons h3">❤️ </i></a>
         <!-- Menu -->
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="{% url 'shop:home_page' %}" class="nav-link px-2 text-dark">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-dark">Shop</a></li>
+          <li><a href="{% url 'shop:home_page' %}" class="nav-link px-2 text-dark">Tienda</a></li>
+          <!-- <li><a href="#" class="nav-link px-2 text-dark">Shop</a></li> -->
           <!-- categories dropdown -->
           <div class="dropdown text-end">
-            <a href="#" class=" mt-2 me-1 ms-1 text-dark d-block link-dark text-decoration-none dropdown-toggle"id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
+            <a href="#" class=" mt-2 me-1 ms-1 text-dark d-block link-dark text-decoration-none dropdown-toggle"id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>
             <ul class="dropdown-menu" aria-labelledby="dropdownUser1">
-              {% for category in categories %}
-              <!-- check if category is parent -->
-                {% if not category.is_sub %}
-                  <!-- parent -->
-                  <li><a href="{% url 'shop:filter_by_category' category.slug %}" class="dropdown-item text-capitalize bg-light border"><b>{{ category }}</b></a></li>
-                  {% for child in category.sub_categories.all %}
-                   <!-- child -->
-                   <li><a href="{% url 'shop:filter_by_category' child.slug %}" class="dropdown-item">{{ child }}</a></li>
-                  {% endfor %}
-                {% endif %}
-              {% endfor %}
+              {% if categories %}
+                {% for category in categories %}
+                <!-- check if category is parent -->
+                  {% if not category.is_sub %}
+                    <!-- parent -->
+                    <li><a href="{% url 'shop:filter_by_category' category.slug %}" class="dropdown-item text-capitalize bg-light border"><b>{{ category }}</b></a></li>
+                    {% for child in category.sub_categories.all %}
+                    <!-- child -->
+                    <li><a href="{% url 'shop:filter_by_category' child.slug %}" class="dropdown-item">{{ child }}</a></li>
+                    {% endfor %}
+                  {% endif %}
+                {% endfor %}
+              {% else %}
+                <li><a class="dropdown-item"><b>Sin categorias...</b></a></li>
+              {% endif %}
             </ul>
           </div>
-          <li><a href="#" class="nav-link px-2 text-dark">FAQs</a></li>
-          <li><a href="#" class="nav-link px-2 text-dark">About</a></li>
+          <!-- <li><a href="#" class="nav-link px-2 text-dark">FAQs</a></li> -->
+          <li><a href="#" class="nav-link px-2 text-dark">Acerca de...</a></li>
         </ul>
         <!-- search form -->
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" action="{% url 'shop:search' %}">
-          <input name="q" type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+          <input name="q" type="search" class="form-control form-control-dark" placeholder="🔍Buscar..." aria-label="Search">
         </form>
         {% if request.user.is_authenticated %}
         <!-- user profile dropdown -->
         <div class="dropdown text-end">
-          <a href="#" class="btn btn-primary text-white me-4 d-block link-dark text-decoration-none dropdown-toggle"id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">Profile</a>
+          <a href="#" class="btn btn-primary text-white me-4 d-block link-dark text-decoration-none dropdown-toggle"id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">🙍‍♂️ Perfil</a>
           <ul class="dropdown-menu" aria-labelledby="dropdownUser1">
-            <li><a href="{% url 'cart:show_cart' %}" <a class="dropdown-item">Cart</a></li>
-            <li><a href="{% url 'shop:favorites' %}" <a class="dropdown-item">Favorites</a></li>
-            <li><a href="{% url 'orders:user_orders' %}" <a class="dropdown-item">Orders</a></li>
-            <li><a class="dropdown-item" href="{% url 'accounts:edit_profile' %}">Edit Profile</a></li>
-            <li><a class="dropdown-item text-danger" href="{% url 'accounts:user_logout' %}">Sign out</a></li>
+            <li><a href="{% url 'cart:show_cart' %}" <a class="dropdown-item"> 🛒 Carrito</a></li>
+            <li><a href="{% url 'shop:favorites' %}" <a class="dropdown-item">❤️ Favoritos</a></li>
+            <li><a href="{% url 'orders:user_orders' %}" <a class="dropdown-item">🛍️ Mis compras</a></li>
+            <li><a class="dropdown-item" href="{% url 'accounts:edit_profile' %}">⚙️ Editar perfil</a></li>
+            <li><a class="dropdown-item text-danger" href="{% url 'accounts:user_logout' %}">👤 Cerrar sesion</a></li>
           </ul>
         </div>
         {% else %}
         <!-- login, sign-up btn -->
         <div class="text-end">
-          <a href="{% url 'accounts:user_login' %}" class="btn btn-outline-primary me-2">Login</a>
-          <a href="{% url 'accounts:user_register' %}" class="btn btn-primary">Sign-up</a>
+          <a href="{% url 'accounts:user_login' %}" class="btn btn-outline-primary me-2">Iniciar Sesion</a>
+          <a href="{% url 'accounts:user_register' %}" class="btn btn-primary">Registrarse</a>
         </div>
         {% endif %}
       </div>
