--- a/shop/templates/home_page.html
+++ b/shop/templates/home_page.html
@@ -8,7 +8,7 @@
     <div class="mt-3 text-center">
       <h5 class="card-title">{{ product.title }}</h5>
       <p class="text-muted">${{ product.price }}</p>
-      <a href="{{ product.get_absolute_url }}" class="mb-3 btn btn-outline-primary w-100">Buy Now</a>
+      <a href="{{ product.get_absolute_url }}" class="mb-3 btn btn-outline-primary w-100">Comprar ahora!</a>
     </div>
   </div>
 {% endfor %}
@@ -17,13 +17,13 @@
   <div class="col-md-2">
     <ul class="pagination">
       {% if products.has_previous %}
-      <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}">Previous</a></li>
+      <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}">Anterior</a></li>
       <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}">{{products.previous_page_number}}</a></li>
       {% endif %}
       <li class="page-item"><a class="page-link" href="?page={{ products.number }}">{{products.number}}</a></li>
       {% if products.has_next %}
       <li class="page-item"><a class="page-link" href="?page={{ products.next_page_number }}">{{products.next_page_number}}</a></li>
-      <li class="page-item"><a class="page-link" href="?page={{ products.next_page_number }}">Next</a></li>
+      <li class="page-item"><a class="page-link" href="?page={{ products.next_page_number }}">Siguiente</a></li>
       {% endif %}
     </ul>
   </div>
@@ -33,7 +33,7 @@
   <div class="col-md-2"></div>
   <div class="col-md-8 mt-5 pt-5 text-center">
     <br>
-    <h3 class="text-muted text-capitalize">No Products..!</h3>
+    <h3 class="text-muted text-capitalize">Por el momento no hay productos!</h3>
   </div>
   <div class="col-md-2"></div>
 </div>
