--- a/shop/templates/product_detail.html
+++ b/shop/templates/product_detail.html
@@ -8,12 +8,12 @@
     <div class="col-md-5 p-3 border rounded">
         <!-- category -->
         <div class="border-bottom mb-2 pb-2">
-            <span class="text-muted ">categories:</span><a class="text-decoration-none text-dark" href="{% url 'shop:filter_by_category' product.category.slug %}"> {{product.category}}</a>
+            <span class="text-muted ">Categorias:</span><a class="text-decoration-none text-dark" href="{% url 'shop:filter_by_category' product.category.slug %}"> {{product.category}}</a>
         </div>
         <!-- title -->
         <h2>{{ product.title }}</h2>
         <!-- price -->
-        <h4 class="mt-4 text-dark">Price: ${{ product.price }}</h4>
+        <h4 class="mt-4 text-dark">Precio: ${{ product.price }}</h4>
         <!-- description -->
         <div class="mt-4 pe-3 mb-5">{{ product.description }}</div>
         <!-- cart btn -->
@@ -24,9 +24,9 @@
         </form>
         <br>
         {% if favorites == 'remove' %}
-        <a href="{% url 'shop:remove_from_favorites' product.id %}" class="btn btn-outline-danger mt-5 text-capitalize ">{{favorites}} from favorites</a>
+        <a href="{% url 'shop:remove_from_favorites' product.id %}" class="btn btn-outline-danger mt-5 text-capitalize ">Eliminar de tus favoritos 💔</a>
         {% else %}
-        <a href="{% url 'shop:add_to_favorites' product.id %}" class="btn btn-outline-success mt-5 text-capitalize ">add to {{favorites}}</a>
+        <a href="{% url 'shop:add_to_favorites' product.id %}" class="btn btn-outline-success mt-5 text-capitalize ">Agregar a tus favoritos ❤</a>
         {% endif %}
     </div>
     <!-- product image -->
@@ -36,7 +36,7 @@
 </div>
 <!-- related products -->
 <div class="row mt-4 mb-4">
-    <h3>Related Products:</h3><hr>
+    <h3>Productos relacionados: </h3><hr>
     {% for p in related_products %}
         <!-- dont show the current product in this page -->
         {% if p != product %}
@@ -44,8 +44,8 @@
                 <img style="object-fit: cover;" class="card-img mt-2" width="268" height="200" src="{{ p.image.url }}">
                 <div class="mt-3 text-center">
                 <h5 class="card-title">{{ p.title }}</h5>
-                <p class="text-muted">${{ p.price }}</p>
-                <a href="{{ p.get_absolute_url }}" class="mb-3 btn btn-outline-primary w-100">Buy Now</a>
+                <p class="text-muted">Precio: ${{ p.price }}</p>
+                <a href="{{ p.get_absolute_url }}" class="mb-3 btn btn-outline-primary w-100">Comprar ahora!</a>
                 </div>
             </div>
         {% endif %}
