--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -5,7 +5,7 @@
 {% if cart_count != 0 %}
 <div class="col-md-8 border rounded p-3">
 <table class="table table-striped ">
-    <thead class="text-muted">
+    <thead class="text-white">
       <tr>
         <th scope="col"></th>
         <th scope="col">Producto</th>
@@ -21,7 +21,7 @@
         <th scope="row">{{ forloop.counter }}</th>
         <td><a class="text-decoration-none" href="{{ item.product.get_absolute_url }}">{{ item.product.title }}</a></td>
         <td>${{ item.price }}</td>
-        <td>{{ item.quantity }}</td>
+        <center><td>{{ item.quantity }}</td></center>
         <td>${{ item.total_price }}</td>
         <td><a class="text-danger text-decoration-none" href="{% url 'cart:remove_from_cart' item.product.id %}">Eliminar del carrito</a></td>
       </tr>
@@ -29,14 +29,14 @@
     {% endfor %}
 </table>
 <hr>
-<a href="/" class="btn btn-danger">Seguir comprando</a>
+<a href="/" class="btn btn-danger">Seguir comprando 🛒</a>
 <a href="{% url 'orders:create_order' %}" style="float: right;" class="btn btn-success mt-1">Comprar!</a>
-<h4 class="mt-4"><span class="text-muted">Precio total:</span> ${{ cart.get_total_price }}</h4>
+<h4 class="mt-4" class="text-black"><span style="color: white;">Precio total:</span> ${{ cart.get_total_price }}</h4>
 </div>
 {% else %}
 <div class="col-md-8 mt-5 pt-5 text-center">
   <br>
-  <h3 class="text-muted text-capitalize">Tu carrito esta vacio!</h3>
+  <h3 class="text-capitalize text-white">Tu carrito esta vacio!</h3>
   <a href="/" class="text-primary text-decoration-none">Volver a la tienda</a>
 </div>
 {% endif %}
