--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -11,6 +11,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- <title>{% if title %} {{ title }} {% else %} Water's Store {% endif %}</title> -->
     <title>Water's store</title>
+    <style>
+      body {
+        background-color: #3a3f4b;
+      }
+    </style>
 </head>
 <body>
   <header class="p-2 border-bottom">
@@ -28,12 +33,12 @@
         <a href="{% url 'shop:favorites' %}" class="text-primary mt-2 me-2"><i class="material-icons h3">❤️ </i></a>
         <!-- Menu -->
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="{% url 'shop:home_page' %}" class="nav-link px-2 text-dark">Tienda</a></li>
+          <li><a href="{% url 'shop:home_page' %}" class="nav-link px-2 text-white">Tienda</a></li>
           <!-- <li><a href="#" class="nav-link px-2 text-dark">Shop</a></li> -->
           <!-- categories dropdown -->
           <div class="dropdown text-end">
-            <a href="#" class=" mt-2 me-1 ms-1 text-dark d-block link-dark text-decoration-none dropdown-toggle"id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownUser1">
+            <a href="#" class=" mt-2 me-1 ms-1 text-white d-block link-with text-decoration-none dropdown-toggle"id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownUser1" >
               {% if categories %}
                 {% for category in categories %}
                 <!-- check if category is parent -->
@@ -47,12 +52,12 @@
                   {% endif %}
                 {% endfor %}
               {% else %}
-                <li><a class="dropdown-item"><b>Sin categorias...</b></a></li>
+                <li><a class="dropdown-item text-white"><b>Sin categorias...</b></a></li>
               {% endif %}
             </ul>
           </div>
           <!-- <li><a href="#" class="nav-link px-2 text-dark">FAQs</a></li> -->
-          <li><a href="#" class="nav-link px-2 text-dark">Acerca de...</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Acerca de...</a></li>
         </ul>
         <!-- search form -->
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" action="{% url 'shop:search' %}">
