--- a/shop/templates/favorites.html
+++ b/shop/templates/favorites.html
@@ -4,11 +4,11 @@
 <center><h2>Favoritos ❤</h2></center>
 <hr>
 {% for product in products %}
-<div class="card me-2 mb-2" style="width: 16rem;">
+<div class="card me-2 mb-2" style="width: 16rem; background-color: #292d36;">
   <img style="object-fit: cover;" class="card-img mt-2" width="268" height="200" src="{{ product.image.url }}">
   <div class="mt-3 text-center">
-    <h5 class="card-title">{{ product.title }}</h5>
-    <p class="text-muted">${{ product.price }}</p>
+    <h5 class="card-title" style="color: white;">{{ product.title }}</h5>
+    <p style="color: black;">Precio: ${{ product.price }}</p>
     <a href="{{ product.get_absolute_url }}" class="mb-3 btn btn-primary w-100">Comprar ahora!</a>
   </div>
   <a href="{% url 'shop:remove_from_favorites' product.id %}" class="mb-3 btn btn-outline-danger">Eliminar de favoritos 💔</a>
