--- a/shop/templates/home_page.html
+++ b/shop/templates/home_page.html
@@ -3,11 +3,11 @@
 {% block content %}
 {% if products %}
 {% for product in products.object_list %}
-<div class="card me-2 mb-2" style="width: 16rem;">
+<div class="card me-2 mb-2" style="width: 16rem; background-color: #292d36;">
     <img style="object-fit: cover;" class="card-img mt-2" width="268" height="200" src="{{ product.image.url }}">
     <div class="mt-3 text-center">
-      <h5 class="card-title">{{ product.title }}</h5>
-      <p class="text-muted">${{ product.price }}</p>
+      <h5 class="card-title" style="color: white;">{{ product.title }}</h5>
+      <p style="color: black;">Precio: ${{ product.price }}</p>
       <a href="{{ product.get_absolute_url }}" class="mb-3 btn btn-outline-primary w-100">Comprar ahora!</a>
     </div>
   </div>
