--- a/accounts/templates/password_reset.html
+++ b/accounts/templates/password_reset.html
@@ -1,15 +1,21 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="col-md-6">
+    <div class="col-md-6 text-center mx-auto">
         <form method="POST">
             {% csrf_token %}
-            <h3>Reset Password</h3>
+            <h1 class="mb-4 text-black fw-bold">Restablecer contraseña</h1>
             <hr>
-            <p class="text-danger">Please enter your email that you used in your account.</p>
+            <p class="text-danger">Ingresa tu correo electronico y te enviaremos un correo de recuperacion</p>
             {{ form|crispy }}
+            <br>
             <div class="form-group">
-                <button class="btn btn-primary mt-3 w-100" type="submit">Request Password Reset</button>
+                <button class="btn btn-primary mt-3 w-100" type="submit">Enviar correo!</button>
+            </div>
+            <div class="mt-2 mb-2">
+                <small class="">
+                    <a class="text-decoration-none text-danger" href="{% url 'accounts:user_login' %}">Cancelar</a>
+                </small>
             </div>
         </form>
     </div>
