--- a/accounts/templates/password_reset_done.html
+++ b/accounts/templates/password_reset_done.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="col-md-6 alert alert-info">
-        An Email has been sent with instrunctions to reset your password!
+    <div class="col-md-6 alert alert-info mx-auto">
+        En unos instantes recibiras un correo con las instrucciones a seguir para cambiar tu contraseña
+    </div>
+    <div class="mt-1 text-center">
+        <small class="text-black">
+            Volver al <a href="{% url 'accounts:user_login' %}">Inicio</a>
+        </small>
     </div>
 {% endblock %}
