--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -13,7 +13,7 @@
     <title>Water's store</title>
     <style>
       body {
-        background-color: #3a3f4b;
+        background-color: #727372;
       }
     </style>
 </head>
