--- a/shop/templates/favorites.html
+++ b/shop/templates/favorites.html
@@ -19,7 +19,7 @@
   <div class="col-md-2"></div>
   <div class="col-md-8 mt-5 pt-5 text-center">
     <br>
-    <h3 class="text-muted text-capitalize">Tu lista de favoritos esta vacia!</h3>
+    <h3 class="text-white text-capitalize fw-bold">Tu lista de favoritos esta vacia!</h3>
     <a href="/" class="text-primary text-decoration-none">Volver a la tienda</a>
   </div>
   <div class="col-md-2"></div>
