--- a/accounts/templates/email_template.html
+++ b/accounts/templates/email_template.html
@@ -1,14 +1,13 @@
 {% load i18n %}{% autoescape off %}
-{% blocktranslate %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktranslate %}
+{% blocktranslate %}Usted ha recibido este correo porque ha solicitado el restablecimiento de su contraseña en el sitio Water's Store.{% endblocktranslate %}
 
-{% translate "Please go to the following page and choose a new password:" %}
+{% translate "El siguiente link te redigira a la pantalla para crear tu nueva contraseña: " %}
 {% block reset_link %}
 {{ protocol }}://{{ domain }}{% url 'accounts:password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
-{% translate 'Your username, in case you’ve forgotten:' %} {{ user.get_username }}
+{% translate "Si usted no solicito el cambio de su contraseña, solo haga caso omiso" %}
 
-{% translate "Thanks for using our site!" %}
 
-{% blocktranslate %}The {{ site_name }} team{% endblocktranslate %}
+{% blocktranslate %}Atte: The Water's Store{% endblocktranslate %}
 
 {% endautoescape %}
