--- a/accounts/templates/password_reset_complete.html
+++ b/accounts/templates/password_reset_complete.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="col-md-6 alert alert-success">
-        Your Password Has Been Set.
+        Tu contraseña ha sido restablecida con exito!
     </div>
-    <a href="{% url 'accounts:user_login' %}" class="">Login Here</a>
+    <a href="{% url 'accounts:user_login' %}" class="">Iniciar sesion</a>
 {% endblock %}
