--- a/accounts/templates/password_reset_confirm.html
+++ b/accounts/templates/password_reset_confirm.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="col-md-6">
+    <div class="col-md-6 text-center mx-auto">
         <form method="POST">
             {% csrf_token %}
-            <h3>Reset Password</h3>
+            <h2 class="mb-3 text-black fw-bold">Restablecer Contraseña</h2>
             <hr>
             {{ form|crispy }}
             <div class="form-group">
-                <button class="btn btn-primary mt-3 w-100" type="submit">Reset Password</button>
+                <button class="btn btn-primary mt-3 w-100" type="submit">Restablecer</button>
             </div>
         </form>
     </div>
