--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -39,7 +39,7 @@
 {% else %}
 <div class="col-md-8 mt-5 pt-5 text-center">
   <br>
-  <h3 class="text-capitalize text-white">Tu carrito esta vacio!</h3>
+  <h3 class="text-capitalize text-white fw-bold">Tu carrito esta vacio!</h3>
   <a href="/" class="text-primary text-decoration-none">Volver a la tienda</a>
 </div>
 {% endif %}
