--- a/shop/templates/home_page.html
+++ b/shop/templates/home_page.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% if products %}
 {% for product in products.object_list %}
-<div class="card me-2 mb-2" style="width: 16rem; background-color: #292d36;">
+<div class="card me-2 mb-2 shadow" style="width: 16rem; background-color: #5e5e5e;">
     <img style="object-fit: cover;" class="card-img mt-2" width="268" height="200" src="{{ product.image.url }}">
     <div class="mt-3 text-center">
       <h5 class="card-title" style="color: white;">{{ product.title }}</h5>
@@ -33,7 +33,7 @@
   <div class="col-md-2"></div>
   <div class="col-md-8 mt-5 pt-5 text-center">
     <br>
-    <h3 class="text-muted text-capitalize">Por el momento no hay productos!</h3>
+    <h3 class="text-white text-capitalize fw-bold">Por el momento no hay productos!</h3>
   </div>
   <div class="col-md-2"></div>
 </div>
