--- a/shop/templates/product_detail.html
+++ b/shop/templates/product_detail.html
@@ -5,7 +5,7 @@
 <div class="row mb-3 mt-4">
     <div class="col-md-1"></div>
     <!-- product content -->
-    <div class="col-md-5 p-3 border rounded">
+    <div class="col-md-5 p-3 border rounded" style="background-color: #5e5e5e;">
         <!-- category -->
         <div class="border-bottom mb-2 pb-2">
             <span class="text-black text-center">Categorias:</span><a class="text-decoration-none link-info" href="{% url 'shop:filter_by_category' product.category.slug %}"> {{product.category}}</a>
@@ -32,16 +32,16 @@
     </div>
     <!-- product image -->
     <div class="col-md-6">
-        <img style="object-fit: cover;" class="rounded" src="{{ product.image.url }}" width="510" height="500">
+        <img style="object-fit: cover;" class="rounded shadow" src="{{ product.image.url }}" width="510" height="500">
     </div>
 </div>
 <!-- related products -->
 <div class="row mt-4 mb-4">
-    <h3 class="text-white">Productos similares: </h3><hr>
+    <h3 class="mb-4 text-white fw-bold text-center">Productos similares: </h3><hr>
     {% for p in related_products %}
         <!-- dont show the current product in this page -->
         {% if p != product %}
-            <div class="card me-2 mb-2" style="width: 16rem; background-color: #292d36;">
+            <div class="card me-2 mb-2 shadow" style="width: 16rem; background-color: #5e5e5e;">
                 <img style="object-fit: cover;" class="card-img mt-2" width="268" height="200" src="{{ p.image.url }}">
                 <div class="mt-3 text-center">
                 <h5 class="card-title text-white">{{ p.title }}</h5>
