--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -19,7 +19,7 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-black">
-                No tienes una cuenta? <a href="{% url 'accounts:user_register' %}">Registrate!</a>
+                ¿No tienes una cuenta? <a class="text-decoration-none fw-bold" href="{% url 'accounts:user_register' %}">Registrate!</a>
             </small>
         </div>
     </div>
