--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
 <div class="col-md-2"></div>
 {% if cart_count != 0 %}
@@ -40,7 +40,9 @@
 <div class="col-md-8 mt-5 pt-5 text-center">
   <br>
   <h3 class="text-capitalize text-white fw-bold">Tu carrito esta vacio!</h3>
-  <a href="/" class="text-primary text-decoration-none">Volver a la tienda</a>
+  <a href="/" class="text-primary text-decoration-none fw-bold">Volver a la tienda</a>
+  <br>
+  <img src="{% static 'img/empty-cart.png' %}" alt="empty-cart">
 </div>
 {% endif %}
 <div class="col-md-2"></div>
