--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!-- bootstrap css cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- <title>{% if title %} {{ title }} {% else %} Water's Store {% endif %}</title> -->
+    <link rel="icon" href="{% static 'img/server-icon.png' %}">
     <title>Water's store</title>
     <style>
       body {
@@ -52,12 +52,10 @@
                   {% endif %}
                 {% endfor %}
               {% else %}
-                <li><a class="dropdown-item text-white"><b>Sin categorias...</b></a></li>
+                <li><a class="dropdown-item text-black"><b>Sin categorias...</b></a></li>
               {% endif %}
             </ul>
           </div>
-          <!-- <li><a href="#" class="nav-link px-2 text-dark">FAQs</a></li> -->
-          <li><a href="#" class="nav-link px-2 text-white">Acerca de...</a></li>
         </ul>
         <!-- search form -->
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" action="{% url 'shop:search' %}">
