--- a/dashboard/templates/order_detail.html
+++ b/dashboard/templates/order_detail.html
@@ -2,17 +2,17 @@
 
 {% block content %}
 {% if order.status %}
-    <h4><b class="text-success">Successful</b></h4>
+    <h4><b class="text-success">Entregado</b></h4>
 {% else %}
-    <h3><b class="text-danger">Cancelled</b></h3>
+    <h3><b class="text-danger">Cancelado</b></h3>
 {% endif %}
 {% for item in items  %}
 <div class="bg-light rounded border-bottom p-3">
-    <p>product:<a class="text-decoration-none" href="{{ item.product.get_absolute_url }}"> {{item.product.title}}</a></p>
-    <p>Price: ${{item.price}}</p>
-    <p>quantity: {{item.quantity}}</p>
+    <p>producto:<a class="text-decoration-none" href="{{ item.product.get_absolute_url }}"> {{item.product.title}}</a></p>
+    <p>precio: ${{item.price}}</p>
+    <p>cantidad: {{item.quantity}}</p>
 </div>
 {% endfor %}
-<h4 class="border-top pt-2 text-muted">Total: ${{ order.get_total_price }}</h4>
+<h4 class="border-top pt-2 text-muted">Total del pedido: ${{ order.get_total_price }}</h4>
 
 {% endblock %}
