--- a/accounts/templates/edit_profile.html
+++ b/accounts/templates/edit_profile.html
@@ -2,14 +2,14 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <div class="col-md-6">
+    <div class="col-md-6 text-center mx-auto">
         <form method="POST">
             {% csrf_token %}
-            <h3>Edit Profile</h3>
+            <h3>Editar Perfil</h3>
             <hr>
             {{ form|crispy  }}
             <div class="form-group">
-                <button class="btn btn-primary mt-3 w-100" type="submit">Update</button>
+                <button class="btn btn-primary mt-3 w-100" type="submit">Actualizar perfil</button>
             </div>
         </form>
     </div>
