--- a/accounts/templates/manager_login.html
+++ b/accounts/templates/manager_login.html
@@ -5,20 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
+    <title>Menu Administrador</title>
+    <style>
+      body {
+        background-color: #727372;
+      }
+    </style>
   </head>
   <body>
     <main class="container">
-      <div class="row mt-5 text-capitalize">
+      <div class="row mt-5 text-capitalize text-center mx-auto">
         <div class="col-md-4"></div>
         <div class="col-md-4">
           <form method="post" class="mt-5 pt-5">
             {% csrf_token %}
-            <h2>Dashboard</h2>
+            <h2>Menu admin 👨‍🔧</h2>
             {{ form }}
-            <button class="w-100 btn btn-primary mt-3" type="submit">Sign In</button>
+            <button class="w-100 btn btn-primary mt-3" type="submit">Iniciar sesion</button>
           </form>
-          <p class="text-muted mt-3"><a href="{% url 'shop:home_page' %}">Back to shop</a></p>
+          <p class="text-muted mt-3 text-decoration-none fw-bold"><a href="{% url 'shop:home_page' %}">Volver a la tienda</a></p>
         </div>
         <div class="col-md-4"></div>
       </div>
