--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>{{title}}</title>
+    <title>Menu Administrador</title>
+    <style>
+        body {
+          background-color: #727372;
+        }
+      </style>
 </head>
 <body>
     <div class="row mt-5">
         <div class="col-md-1"></div>
         <!-- content -->
         <div class="col-md-7">
-            <h2 class="border-bottom text-capitalize">{{ title }}</h2>
+            <h2 class="border-bottom text-capitalize text-center mx-auto fw-bold">{{ title }}</h2>
+            <br>
             <div class="p-4">
                 <!-- messages -->
                 {% if messages %}
@@ -25,27 +31,27 @@
         </div>
         <!-- sidebar -->
         <div class="col-md-3 border-start">
-            <h3 class="text-muted">Menu</h3>
+            <h3 class="text-black fw-bold">Menu principal 🛠️</h3>
             <a class="text-decoration-none" href="{% url 'dashboard:products' %}">
-                <li class="rounded list-group-item  text-primary">Products</li>
+                <li class="rounded list-group-item text-white" style="background-color: #5e5e5e;">Ver productos disponibles</li>
             </a>
             <a class="text-decoration-none" href="{% url 'dashboard:add_product' %}">
-                <li class="rounded list-group-item mt-2 text-primary">Add New Product</li>
+                <li class="rounded list-group-item mt-2 text-white" style="background-color: #5e5e5e;">Agregar nuevo producto</li>
             </a>
             <a class="text-decoration-none" href="{% url 'dashboard:add_category' %}">
-                <li class="rounded list-group-item mt-2  text-primary">Add New Category</li>
+                <li class="rounded list-group-item mt-2  text-white" style="background-color: #5e5e5e;">Agregar nueva categoria</li>
             </a>
             <a class="text-decoration-none" href="{% url 'dashboard:orders' %}">
-                <li class="rounded list-group-item mt-2  text-primary">Orders</li>
+                <li class="rounded list-group-item mt-2  text-white" style="background-color: #5e5e5e;">Pedidos procesados</li>
             </a>
             <hr>
             <a class="text-decoration-none" href="{% url 'shop:home_page' %}">
-                <li class="rounded list-group-item bg-primary mt-2  text-white">Back To shop</li>
+                <li class="rounded list-group-item bg-primary mt-2  text-white">Volver a la tienda</li>
             </a>
             <a class="text-decoration-none" href="{% url 'accounts:user_logout' %}">
-                <li class="rounded list-group-item bg-danger mt-2  text-white">Logout</li>
+                <li class="rounded list-group-item bg-danger mt-2  text-white">Cerrar sesion</li>
             </a>
-            <div class="text-muted mt-2">You logged in as: {{ request.user.email }}</div>
+            <div class="text-muted mt-2">Iniciaste sesion como: {{ request.user.email }}</div>
         </div>
         <div class="col-md-1 "></div>
     </div>
